Add MCP tools for function custom storage